<resources>
    <string name="app_name">KURUKU</string>
    <string name="title_activity_foundation">Foundation</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_base">KURUKU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notif">
        A verification code has been sent to this number,
        if it is not auto-detected and verified please kindly
        get is from the sms sent and input it manually. If you
        havent received the sms just tap RESEND CODE
    </string>
    <string name="phone_number_verification">PHONE NUMBER VERIFICATION</string>
    <string name="full_names">Full Names</string>
    <string name="shop_location">shop location</string>
    <string name="address">Address</string>
    <string name="phone_address">Phone number</string>
    <string name="region_of_origin">Region of origin</string>
    <string name="save_information">SAVE INFORMATION</string>
    <string name="phone_number1">phone number with your country code</string>
    <string name="phone_verification">PHONE VERIFICATION</string>
    <string name="verify_code">Verify Code</string>
    <string name="neo">neo</string>
    <string name="phone_number2">phone number</string>
    <string name="id_card_number">ID Card Number</string>
    <string name="profile">Profile</string>
    <string name="business_information">BUSINESS INFORMATION</string>
    <string name="business_name">Business Name</string>
    <string name="business_owner">Business Owner</string>
    <string name="business_location">Business Location</string>
    <string name="business_category">Business Category</string>
    <string name="kuruku">Kuruku</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="accountmenu">account</string>
    <string name="searchbutton">searchbutton</string>
    <string name="search_items_here">search items here</string>
    <string name="addbusiness">addBusiness</string>
    <string name="about_kuruku">About Kuruku</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="image_view">image view</string>
    <string name="enter_code_to_verify">enter code to verify</string>
    <string name="resend_code">resend code</string>
    <string name="kuruku_account_name">Kuruku Account Name</string>
    <string name="user_s_names">User\'s Names</string>
    <string name="update_profile">Update Profile</string>
    <string name="account_name">Account name</string>
    <string name="save_profile">Save profile</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="profile_information">PROFILE INFORMATION</string>
    <string name="save_info">Save info</string>
    <string name="title_activity_core">myname</string>

    <array name="origins">
        <item>ADAMAWA</item>
        <item>CENTRE</item>
        <item>EAST</item>
        <item>FAR NORTH</item>
        <item>LITORAL</item>
        <item>NORTH</item>
        <item>NORTH WEST</item>
        <item>SOUTH</item>
        <item>SOUTH WEST</item>
        <item>WEST</item>
    </array>

    <array name="search_filter">
        <item>Filter</item>
        <item>around my location</item>
        <item>around the region</item>
        <item>search the whole country</item>
    </array>

    <array name="business_types">
        <item>Business Type</item>
        <item>Retail shop</item>
        <item>Building Material</item>
        <item>Restaurant</item>
        <item>Cafe Resto</item>
        <item>Fruits</item>
        <item>Drug Store</item>
        <item>Electronic Shop</item>
        <item>Agric Products</item>
        <item>Travel Agency</item>
        <item>Hotel</item>
        <item>Fashion Designs</item>
        <item>Pharmacy</item>
        <item>Hospital</item>
        <item>Documentation</item>
        <item>Book Shop</item>
        <item>Buyam-Sellam</item>
        <item>Roasted Fish</item>
        <item>Pofpof and Beans</item>
        <item>Cosmetic Shop</item>
        <item>Hair Dressing</item>
        <item>Tailoring</item>
        <item>Wholesales</item>
        <item>Beer Palour</item>
        <item>Barbing Studio</item>
        <item>Decor</item>
        <item>Church</item>
        <item>School</item>
        <item>Others</item>

    </array>

</resources>
