<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentic.Authentication">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:id="@+id/verif"
        android:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:textAlignment="center"
            android:textColor="#111"
            android:textStyle="bold"
            android:text="@string/phone_verification"
            android:fontFamily="@font/ethnocentricrgit"
            android:textSize="20sp"
            android:gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_jpeg_01"
            android:layout_height="0dp"
            android:contentDescription="@string/neo"
            android:layout_weight="2.2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical"
            android:weightSum="3"
            android:background="@android:color/transparent">

            <ProgressBar
                android:layout_width="match_parent"
                android:id="@+id/pbar"
                android:layout_weight="0.7"
                android:layout_height="0dp"
                android:visibility="gone"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/number"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:hint="@string/phone_number1"
                android:background="@android:color/transparent"
                android:inputType="phone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"/>
            <Button
                android:layout_width="match_parent"
                android:id="@+id/vbtn"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/tview"
                android:text="@string/verify_phone"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/resend"
        android:visibility="gone"
        android:weightSum="5.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bauhaus93"
                android:text="@string/kuruku"
                android:textColor="#026b1e"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="#026b1e"
                android:text="@string/phone_number_verification"
                android:fontFamily="@font/ethnocentricrgit"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@android:color/transparent"
            android:padding="3dp"
            android:text="@string/notif"
            android:textColor="#012e5b"
            android:textSize="12sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />
        <ProgressBar
            android:layout_width="match_parent"
            android:id="@+id/pbar1"
            android:visibility="visible"
            android:layout_weight="0.4"
            android:layout_height="0dp"
            tools:ignore="NestedWeights" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:orientation="vertical"
            android:weightSum="2">

            <EditText
                android:id="@+id/mcode"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:hint="@string/enter_code_to_verify"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:textColor="#111"
                tools:ignore="NestedWeights" />
            <EditText
                android:id="@+id/nphone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number2"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="#111"
                android:layout_marginBottom="5dp"
                tools:ignore="NestedWeights" />
            <Button
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@drawable/tview"
                android:text="@string/verify_code"
                android:layout_marginBottom="5dp"/>
            <Button
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@drawable/tview"
                android:text="@string/resend_code" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>