<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".homepage.Zerox">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:fontFamily="@font/threesixty"
        android:text="@string/kuruku"
        android:textColor="#026b1e"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textSize="42sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tview"
        android:orientation="horizontal"
        android:weightSum="6"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/searchTopichome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.6"
            android:gravity="start"
            android:backgroundTint="#cfcdcd"
            android:hint="@string/search_items_here"
            android:inputType="textWebEditText"
            tools:targetApi="lollipop" />

        <Spinner
            android:id="@+id/spinnerhome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:entries="@array/search_filter"
            android:gravity="center" />

        <Button
            android:id="@+id/findhome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@drawable/ic_search"
            android:contentDescription="@string/searchbutton"
            android:gravity="center" />

    </LinearLayout>
    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="kuruku marketing app offered in: English"
        android:textColor="@color/pale"
        android:textSize="12sp"
        android:textStyle="normal" />


</LinearLayout>